Información del trabajo

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,5 +10,6 @@
 </head>
 <body>
     <h1>Buen Día les desea Daniel Naranjo</h1>
+    <center><p>Hola, espero estén bien, tuve problemas al inicio para poder organizar el entorno de trabajo, lo que pude alcanzar a hacer, trate de buscar información por aparte, el sabado no pude trabajar mucho porque no estuve en casa, pero el domingo hice la copia exacta de los videos y intente meter el crud</p></center>
 </body>
 </html>
